# Hello

./: pyproject.toml
hello/scripts/: darling_script.py  hey_script.py
